colors fixed!
I mistakenly set the link color, but I"m using the color-scheme property which was making my links invisible in the light color scheme. Changed link colors to gray, problem solved!

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,12 +8,13 @@ img {
     display: block;
 }
 a {
-    font-weight: 500;
+    font-weight: bolder;
     font-variant: small-caps;
     text-decoration: none;
 }
 a:link, a:visited {
-    color: white;
+    /* color: white; */
+    color: gray;
 }
 a:active, a:focus, a:hover {
     color:rgb(206, 113, 0);
